video_match_attempt

--- a/notebooks/hmm_state_clustering_hmmlearn_ssm.ipynb
+++ b/notebooks/hmm_state_clustering_hmmlearn_ssm.ipynb
@@ -463,7 +463,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.0 ('hidenseek')",
    "language": "python",
    "name": "python3"
   },
@@ -478,6 +478,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4c0823e86baae0f96ace674699db2c6d9fd7927a1b7ac1ee15c642961b7774c0"
+   }
   }
  },
  "nbformat": 4,
