--- a/notebooks/l5_hmms_measured_by_rf.ipynb
+++ b/notebooks/l5_hmms_measured_by_rf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "78dc2711",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "24ce36af",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b2ace3de-716a-43a5-a68f-8076f2a5161f",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "7d10ff87-09f1-4989-b61c-98f309e0a864",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "89322cdf",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "036d9ee3-b5ea-4f35-9ea0-24d761c9ee3e",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
        "537309.4751941374"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "803dc14e-8002-4a83-aa02-a28cd91b74f4",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "d0cb144d-c396-406f-988f-67222b76533a",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "209182.51092923767"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "2271848f-e45a-4138-b70b-98ce66205377",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "4d05beb5-650d-4448-add5-f97b9cc51083",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "b811cd38-230d-4158-bead-c8407ee73112",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "3590b895-fa05-458d-9552-ca8f50bc0248",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "af141945-8730-4d50-9e60-724abbd9af92",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.0 ('hidenseek')",
    "language": "python",
    "name": "python3"
   },
@@ -350,6 +350,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4c0823e86baae0f96ace674699db2c6d9fd7927a1b7ac1ee15c642961b7774c0"
+   }
   }
  },
  "nbformat": 4,
