match_behavior_demo

--- a/demo_notebooks/l5_match_behavior_test.ipynb
+++ b/demo_notebooks/l5_match_behavior_test.ipynb
@@ -372,7 +372,7 @@
    "id": "b89cbb0d",
    "metadata": {},
    "source": [
-    "## Match hmm states by a 16-state hmm with behaviors by various leading and laging seconds"
+    "## Match hmm states by a 16-state hmm with behaviors through various counting windows"
    ]
   },
   {
