exclusive state matching

--- a/notebooks/l5_hmms_measured_by_rf.ipynb
+++ b/notebooks/l5_hmms_measured_by_rf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "78dc2711",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "24ce36af",
    "metadata": {},
    "outputs": [
@@ -68,17 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "b2ace3de-716a-43a5-a68f-8076f2a5161f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir = \"../hmm_models/\""
+    "max_model_dir = \"../hmm_models/hmm_max/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "7d10ff87-09f1-4989-b61c-98f309e0a864",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "89322cdf",
    "metadata": {},
    "outputs": [
@@ -102,13 +102,13 @@
    ],
    "source": [
     "# Load model\n",
-    "hmm_mrg = pickle.load(open(os.path.join(model_dir, f\"1h_l5_possion_merged_{K}_latents\" + \".hmm\"), \"rb\"))\n",
+    "hmm_mrg = pickle.load(open(os.path.join(max_model_dir, f\"1h_l5_possion_merged_{K}_latents\" + \".hmm\"), \"rb\"))\n",
     "print(f'1h_l5_possion_merged_{K}_latents.hmm loaded.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "036d9ee3-b5ea-4f35-9ea0-24d761c9ee3e",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
        "537309.4751941374"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
+   "id": "cd917788",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "direct_model_dir = \"../hmm_models/direct/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "803dc14e-8002-4a83-aa02-a28cd91b74f4",
    "metadata": {},
    "outputs": [
@@ -143,13 +153,13 @@
    ],
    "source": [
     "# Load model\n",
-    "hmm_dir = pickle.load(open(os.path.join(model_dir, f\"1h_l5_possion_direct_{K}_latents\" + \".hmm\"), \"rb\"))\n",
+    "hmm_dir = pickle.load(open(os.path.join(direct_model_dir, f\"1h_l5_possion_direct_{K}_latents\" + \".hmm\"), \"rb\"))\n",
     "print(f'1h_l5_possion_direct_{K}_latents.hmm loaded.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "d0cb144d-c396-406f-988f-67222b76533a",
    "metadata": {},
    "outputs": [
@@ -159,7 +169,7 @@
        "209182.51092923767"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('hidenseek')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -349,11 +359,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.0 (v3.10.0:b494f5935c, Oct  4 2021, 14:59:19) [Clang 12.0.5 (clang-1205.0.22.11)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "4c0823e86baae0f96ace674699db2c6d9fd7927a1b7ac1ee15c642961b7774c0"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
