--- a/notebooks/l5_match_behavior.ipynb
+++ b/notebooks/l5_match_behavior.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "78dc2711",
    "metadata": {},
    "outputs": [],
@@ -37,9 +37,9 @@
     "sns.set_style(\"white\")\n",
     "sns.set_context(\"talk\")\n",
     "\n",
-    "import ssm\n",
-    "from ssm.util import find_permutation\n",
-    "from ssm.plots import gradient_cmap, white_to_color_cmap"
+    "# import ssm\n",
+    "# from ssm.util import find_permutation\n",
+    "# from ssm.plots import gradient_cmap, white_to_color_cmap"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "24ce36af",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "84103b47",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "20fc8456-1689-42b4-9c97-a7fb424e004a",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "id": "4f0c155f-537f-42bd-92d8-e89c12dd33d8",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1h_l5_possion_direct_150_latents.hmm loaded.\n"
+      "1h_l5_possion_direct_16_latents.hmm loaded.\n"
      ]
     }
    ],
@@ -198,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "id": "85db1da2-16ee-45b9-b109-f99ce3521755",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "877671.2286170352"
+       "209182.51092923767"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8aac5b0c",
    "metadata": {
     "tags": []
@@ -242,6 +242,27 @@
     "         'face groom type 1', 'dive/scrunch', 'head groom', 'ipsi-orient', 'ipsi-investigate',\n",
     "         'face groom type 2', 'ipsi-body groom', 'ipsi-itch type 1', 'ipsi-itch type 2', 'face groom type 3', \n",
     "         'paw groom', 'locomotion', 'contra-forepaw orient', 'contra-orient']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a1f732e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(names)"
    ]
   },
   {
@@ -577,19 +598,11 @@
     "                           hmm_samplerate=10,\n",
     "                           save_figures=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "268e28d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('hidenseek')",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -603,11 +616,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.0 (v3.10.0:b494f5935c, Oct  4 2021, 14:59:19) [Clang 12.0.5 (clang-1205.0.22.11)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "4c0823e86baae0f96ace674699db2c6d9fd7927a1b7ac1ee15c642961b7774c0"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
