--- a/notebooks/hmm_state_clustering_hmmlearn_ssm.ipynb
+++ b/notebooks/hmm_state_clustering_hmmlearn_ssm.ipynb
@@ -463,7 +463,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('hidenseek')",
+   "display_name": "nsp",
    "language": "python",
    "name": "python3"
   },
@@ -477,11 +477,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.0 | packaged by conda-forge | (default, Nov 22 2019, 19:11:19) \n[Clang 9.0.0 (tags/RELEASE_900/final)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "4c0823e86baae0f96ace674699db2c6d9fd7927a1b7ac1ee15c642961b7774c0"
+    "hash": "8b4524c2285503ee5371e1693aa576532508aa4de32b1b2b5267b2ef38aeeb4c"
    }
   }
  },
