--- a/notebooks/exclusive_states_matching.ipynb
+++ b/notebooks/exclusive_states_matching.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,28 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An exlusive state 450 of 1 instances to behavior 15 found in 1h_l5_possion_merged_500_latents.hmm.\n",
-      "An exlusive state 461 of 4 instances to behavior 9 found in 1h_l5_possion_merged_500_latents.hmm.\n"
+      "An exlusive state 450 of 1 instances to behavior face groom type 1 found in 1h_l5_possion_merged_500_latents.hmm.\n",
+      "An exlusive state 461 of 4 instances to behavior contra-itch found in 1h_l5_possion_merged_500_latents.hmm.\n"
      ]
     }
    ],
    "source": [
     "ex_state_to_behavior(K=500)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
