--- a/notebooks/lfp_gmmhmm_bp_hilbert.ipynb
+++ b/notebooks/lfp_gmmhmm_bp_hilbert.ipynb
@@ -984,7 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.0 | packaged by conda-forge | (default, Nov 22 2019, 19:11:19) \n[Clang 9.0.0 (tags/RELEASE_900/final)]"
   },
   "vscode": {
    "interpreter": {
