--- a/notebooks/lfp_state_decoding/lfp_gmmhmm_bp_hilbert.ipynb
+++ b/notebooks/lfp_state_decoding/lfp_gmmhmm_bp_hilbert.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0 | packaged by conda-forge | (default, Nov 22 2019, 19:11:19) \n[Clang 9.0.0 (tags/RELEASE_900/final)]"
+   "version": "3.8.0"
   },
   "vscode": {
    "interpreter": {
