f1_score violin_plot & heatmap

--- a/notebooks/lfp_state_decoding/lfp_bp_welch_umap_hdbscan_rf/lfp_bp_welch_umap_hdbscan_rf_pipeline.ipynb
+++ b/notebooks/lfp_state_decoding/lfp_bp_welch_umap_hdbscan_rf/lfp_bp_welch_umap_hdbscan_rf_pipeline.ipynb
@@ -1248,11 +1248,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 443,
    "metadata": {},
@@ -1270,7 +1265,13 @@
    ],
    "source": [
     "fig = plt.figure(figsize=(18, 10))\n",
-    "ax = sns.heatmap(f1_score_diff_arr, vmin=-0.3, vmax=.3, linewidths=1, square=True, mask=~existing_behav_mask, xticklabels=behav_names_mod[behavior_of_interest_0], cbar_kws={'shrink': 1, 'anchor':(-0.18, 0)}, cmap='coolwarm')\n",
+    "ax = sns.heatmap(f1_score_diff_arr, \n",
+    "                 vmin=-0.3, vmax=.3, \n",
+    "                 linewidths=1, \n",
+    "                 square=True, \n",
+    "                 mask=~existing_behav_mask, \n",
+    "                 xticklabels=behav_names_mod[behavior_of_interest_0], \n",
+    "                 cbar_kws={'shrink': 1, 'anchor':(-0.18, 0)}, cmap='coolwarm')\n",
     "cbar = ax.collections[0].colorbar\n",
     "cbar.ax.tick_params(labelsize=15)\n",
     "plt.xticks(rotation=35, ha='right', fontsize=15)\n",
